; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_DHT.c_send_hardening_getnode_req.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_DHT.c_send_hardening_getnode_req.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@crypto_box_PUBLICKEYBYTES = common dso_local global i32 0, align 4
@CHECK_TYPE_GETNODE_REQ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i32*)* @send_hardening_getnode_req to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @send_hardening_getnode_req(i32* %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %11 = load i32, i32* @crypto_box_PUBLICKEYBYTES, align 4
  %12 = sext i32 %11 to i64
  %13 = add i64 4, %12
  %14 = call i8* @llvm.stacksave()
  store i8* %14, i8** %9, align 8
  %15 = alloca i32, i64 %13, align 16
  store i64 %13, i64* %10, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = call i32 @memcpy(i32* %15, i32* %16, i32 4)
  %18 = getelementptr inbounds i32, i32* %15, i64 4
  %19 = load i32*, i32** %8, align 8
  %20 = load i32, i32* @crypto_box_PUBLICKEYBYTES, align 4
  %21 = call i32 @memcpy(i32* %18, i32* %19, i32 %20)
  %22 = load i32*, i32** %5, align 8
  %23 = load i32*, i32** %6, align 8
  %24 = load i32, i32* @CHECK_TYPE_GETNODE_REQ, align 4
  %25 = load i32, i32* @crypto_box_PUBLICKEYBYTES, align 4
  %26 = sext i32 %25 to i64
  %27 = add i64 4, %26
  %28 = trunc i64 %27 to i32
  %29 = call i32 @send_hardening_req(i32* %22, i32* %23, i32 %24, i32* %15, i32 %28)
  %30 = load i8*, i8** %9, align 8
  call void @llvm.stackrestore(i8* %30)
  ret i32 %29
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #2

declare dso_local i32 @send_hardening_req(i32*, i32*, i32, i32*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
